src/main/webapp/app/shared/components/atoms/select/select.component.scss
.select-wrapper {
  display: flex;
  flex-direction: column;

  .external-link {
    color: var(--p-primary-color);
    text-decoration: underline;
    cursor: pointer;
  }

  .helper-text {
    font-size: 0.8rem;
  }

  // Add styling for border and corners of select fields
  .custom-select {
    border: 0.1rem solid var(--p-border-default);
    border-radius: var(--border-radius-md);

    // Add styling for disabled select fields
    &.p-disabled {
      background-color: var(--p-background-disabled);

      // Add styling for text inside disabled select fields
      .ng-fa-icon,
      .p-select-label.ng-star-inserted {
        color: var(--p-text-disabled) !important;
      }
    }
  }

  .p-select {
    background: var(--p-background-default);

    &:hover {
      border-color: var(--color-border-hover);
    }
  }

  .p-select-dropdown {
    color: var(--p-text-secondary);
    font-size: var(--p-select-sm-font-size);
  }

  .p-select-list-container {
    max-height: 12rem !important;
  }

  // Override primeng styling of border color when clicking on select field
  .p-select:not(.p-disabled).p-focus {
    box-shadow: none;
    border-color: var(--p-border-default);
  }

  // Override PrimeNG positioning and size of the clear ("X") icon
  .p-select-clear-icon {
    width: 1.25rem;
    height: 1.25rem;
    font-size: 0.75rem;
    right: 2rem;
    border-radius: var(--border-radius-full);
    position: absolute;
    align-items: center;
    justify-content: center;
    display: flex;
    cursor: pointer;
    transition: background-color 0.2s ease;

    &:hover {
      background-color: var(--p-background-surface);
    }
  }

  .p-select-clear-icon svg path {
    fill: var(--p-text-secondary);
  }
}

// Global styles for dropdown options (works even when appended to body)
.p-select-overlay {
  margin-top: 0.25rem;
  font-size: var(--p-select-sm-font-size);
  .p-select-list {
    padding: 0;
  }

  .p-select-list-container {
    border-radius: var(--border-radius-sm);
  }

  .p-select-items {
    background: var(--p-background-default);
  }

  .p-select-option {
    margin: 0.1rem 0.25rem;
    border-radius: 0.5rem;
    background: var(--p-background-default);

    &:hover,
    &.p-focus,
    &.p-select-option-selected {
      background: var(--p-primary-hover-color-outlined);
    }

    &.p-select-option-selected {
      color: var(--p-text-primary);
    }
  }
}

